# RuMaMu

./: Cargo.toml  Embed.toml  README.MD
.cargo/: config.toml
src/: lib.rs  main.rs  main_arm.rs  main_linux.rs  main_win.rs  seatalk.rs  seatalk_00.rs  ship_data_traits.rs
src/helper/: mod.rs  unit_converter.rs  units.rs
src/seatalk/: mod.rs  seatalk.rs  seatalk_00.rs  seatalk_01.rs  seatalk_10.rs  seatalk_11.rs  seatalk_20.rs  seatalk_23.rs  seatalk_26.rs  seatalk_27.rs  seatalk_30.rs  seatalk_31.rs  seatalk_36.rs  seatalk_50.rs  seatalk_51.rs  seatalk_52.rs  seatalk_54.rs  seatalk_56.rs  seatalk_61.rs  seatalk_80.rs
src/shipdatabase/: mod.rs  shipdatabase.rs
tests/: test_seatalk_00.rs  test_seatalk_01.rs  test_seatalk_10.rs  test_seatalk_11.rs  test_seatalk_20.rs  test_seatalk_23.rs  test_seatalk_26.rs  test_seatalk_27.rs  test_seatalk_30.rs  test_seatalk_31.rs  test_seatalk_36.rs  test_seatalk_50.rs  test_seatalk_51.rs  test_seatalk_52.rs  test_seatalk_54.rs  test_seatalk_56.rs  test_seatalk_61.rs  test_seatalk_80.rs
