[package]
name = "rumamu"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic ="abort"

[profile.release]
panic ="abort"

[profile.test]
panic ="abort"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f411"] }
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"
